Fixes title overflow in recent images and gives a default title in the list

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -646,7 +646,7 @@ label {
   display: inline-block;
   vertical-align: middle;
   padding-left: 15px;
-
+  width: 152px;
 }
 
 .sidebar-image-list-body a {
